--- a/SistemaUrgencia_v2.0/App.config
+++ b/SistemaUrgencia_v2.0/App.config
@@ -1,6 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+<connectionStrings><add name="DbUrgencias" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Ucatec Lab 1 Pc 15\Desktop\URg\SistemaUrgencia_v2.0\SistemaUrgencia_v2.0\DataL\DbUrgencias.mdf;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="DBUrgenciasEntities" connectionString="metadata=res://*/DataL.URDB.csdl|res://*/DataL.URDB.ssdl|res://*/DataL.URDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-1TC34KH\SQLEXPRESS;initial catalog=DBUrgencias;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<entityFramework>
+<providers>
+<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+</providers>
+</entityFramework>
 </configuration>
