--- a/SistemaUrgencia_v2.0/SistemaUrgencia_v2.0.csproj
+++ b/SistemaUrgencia_v2.0/SistemaUrgencia_v2.0.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.3.0\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -14,6 +15,23 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +53,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialDesignColors, Version=1.2.0.325, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.2.0\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
@@ -42,7 +66,10 @@
       <HintPath>..\packages\MaterialDesignThemes.2.6.0\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +88,54 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataL\Analisis.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\ConstantesVitales.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\DarCamas.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\DatosUrgencia.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Imagenes.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Ingresos.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Perdida_liquidos.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Prescripcion_Emergencia.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Solicitud.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\TipoPrescripcion.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\URDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>URDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\URDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\URDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>URDB.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DataL\Valoracion_inicial.cs">
+      <DependentUpon>URDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="viewLayer\RegistroUrgencias\bt_vistas.xaml.cs">
       <DependentUpon>bt_vistas.xaml</DependentUpon>
     </Compile>
@@ -78,6 +153,9 @@
     </Compile>
     <Compile Include="viewLayer\RegistroUrgencias\UrgenciasP4.xaml.cs">
       <DependentUpon>UrgenciasP4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="viewLayer\RegistroUrgencias\UrgenciasP5.xaml.cs">
+      <DependentUpon>UrgenciasP5.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -115,6 +193,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="viewLayer\RegistroUrgencias\UrgenciasP5.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -134,6 +216,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="DataL\URDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>URDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DataL\URDB.edmx.diagram">
+      <DependentUpon>URDB.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -149,5 +238,41 @@
   <ItemGroup>
     <Resource Include="Img\flecha.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 y x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="DataL\URDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>URDB.edmx</DependentUpon>
+      <LastGenOutput>URDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataL\URDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>URDB.edmx</DependentUpon>
+      <LastGenOutput>URDB.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Este proyecto hace referencia a los paquetes NuGet que faltan en este equipo. Use la restauración de paquetes NuGet para descargarlos. Para obtener más información, consulte http://go.microsoft.com/fwlink/?LinkID=322105. El archivo que falta es {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.3.0\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.3.0\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.3.0\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.3.0\build\EntityFramework.targets')" />
 </Project>
